# Sessionizer

./: Cargo.toml  LICENSE  README.md  default.txt
src/: main.rs
src/utils/: banner.rs  decode.rs  mod.rs  read.rs
