[package]
name = "sessionizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"]}
flate2 = "1.0.25"
jsonwebtoken = "8.2.0"
pbr = "1.0.4"
reqwest = "0.11.14"
ring = "0.16.20"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.92"
